terraform/network/vpc.tf
resource "google_compute_network" "vpc" {
  name                    = var.network_name
  auto_create_subnetworks = false
}

resource "google_compute_subnetwork" "private_subnet" {
  name          = "private-subnet"
  network       = google_compute_network.vpc.name
  ip_cidr_range = "10.0.1.0/24"
  region        = var.region
  project     = "devsecops-454508"
}
